# SemFlow-MPPI

./: .gitignore  AGENTS.md  CONSISTENCY_ANALYSIS.md  CONSISTENCY_FIX_PROPOSAL.py  FIX1_IMPLEMENTATION_REPORT.md  INTERFACE_SYSTEM.md  LICENSE  MODEL_CHECKPOINT_GUIDE.md  README.md  TRANSFORMER_FIXES_REPORT_CN.md  TRANSFORMER_FIXES_SUMMARY.md  WARM_START_MECHANISM.md  check_interfaces.py  environment.yml  example.py  inference.txt  pyproject.toml  requirements.txt  setup_conda_env.sh  test_cbf_implementation.py  test_fix1_proposal_scores.py  test_pipeline.py  test_transformer_fixes.py  train.py  train_l2_mock.py  train_l2_unet.py  validate_l1_l2_unet.py  validate_l2.py  validate_l2_no_l3.py  verify_interface_system.bat  vis_Data.py  visualize_trajectory_cluster.py
cfm/data/: __init__.py  dataset.py
cfm/inference/: __init__.py  rk4.py  sample.py
cfm/models/: __init__.py  adaptive_layer_norm.py  embeddings.py  transformer_cfm.py
cfm/training/: __init__.py  checkpoint.py  interpolation.py  losses.py  train.py
cfm_flowmp/: DATApipeLine.md  INTERFACE_WORKFLOW.md  QUICK_REFERENCE.md  __init__.py  examples_interface_usage.py  interface_checker.py  interfaces.py
configs/: default.yaml
examples/: L2_TIME_ENCODING_QUICK_REF.md  l2_time_encoding_demo.py  semantic_diffusion_planner_demo.py  warm_start_demo.py
mppi_demo/: .gitignore  __init__.py  astar_path_planner.py  compare_cpu_gpu.py  compare_mppi_astar.py  compare_mppi_rrtstar.py  monitor_cpu.sh  quick_test.py  rrt_star_path_planner.py  run_demo.py  test_mppi_gpu.py
tests/: test_interfaces.py  test_warm_start.py
(+65 files in other folders)
